Adicionando arquivos de configuração do docker
- Criação de Dockerfile para imagens do Frontend e Backend
- Criação de docker-compose.yml para integrar frontend, backend e mongodb
- Configuração de variáveis de ambiente

--- a/.env
+++ b/.env
@@ -6,15 +6,20 @@
 
 # Backend Settings
 
-# MONGODB_DB=
-# MONGODB_HOST=
+# MONGODB_DB=mongo
+MONGODB_HOST=password-generator-mongo
 # MONGODB_PORT=
-# MONGODB_USERNAME=
-# MONGODB_PASSWORD=
+# MONGODB_USERNAME=mongo
+# MONGODB_PASSWORD=mongo
 # MONGODB_CONNECT=
 # SCHEDULER_API_ENABLED=
 # SCHEDULER_TIMEZONE=
 
 # Frontend Settings
 
-# PASSWORDS_API=
+PASSWORDS_API=http://password-generator-backend:5000/passwords/
+
+# Dockerfile Environment Variables
+
+FLASK_ENV=development
+FLASK_DEBUG=True
